kubernetes/checkout-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-service
  template:
    metadata:
      labels:
        app: checkout-service
    spec:
      containers:
      - name: checkout-service
        image: <ACR_NAME>.azurecr.io/checkout-service:latest # Placeholder para a imagem
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5003"
spec:
  selector:
    app: checkout-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
