kubernetes/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: <ACR_NAME>.azurecr.io/payment-service:latest # Placeholder para a imagem
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5002"
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
