kubernetes/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: <ACR_NAME>.azurecr.io/product-service:latest # Placeholder para a imagem
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5001"
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
